Ironbar: Fix tray spacing, restrict icon size, and list workspaces in order

--- a/.config/ironbar/style.css
+++ b/.config/ironbar/style.css
@@ -54,18 +54,15 @@ box, menubar, button {
 }
 
 .tray {
-	box-shadow: none;
-	padding: 0px 6px;
+	/* box-shadow: none; */
+	padding: 0px 12px;
 	background-color: transparent;
+	margin-left: 12px;
 }
 
 .widget {
 	padding: 0px 0px;
 }
-
-/* .notifications { */
-/* 	padding: 0px 0px; */
-/* } */
 
 .notifications .count {
 	font-size: 0.7rem;
@@ -79,6 +76,7 @@ box, menubar, button {
 	padding-right: 4px;
 }
 
+.focused,
 .upower,
 .sysinfo,
 .volume,
